@startuml

    !include ../lexakai/lexakai.theme
    
    title "com.telenav.kivakit.core.kernel.language.objects.reference.virtual.types"
    
    class HardReferencedValue<T>
    {
        --(constructors)--
        +HardReferencedValue(T)
    }
    
    SoftReference <|-- SoftReferencedValue
    class SoftReferencedValue<T>
    {
        --(constructors)--
        +SoftReferencedValue(String, T, ReferenceQueue<T>)
    }
    
    WeakReference <|-- WeakReferencedValue
    class WeakReferencedValue<T>
    {
        --(constructors)--
        +WeakReferencedValue(String, T, ReferenceQueue<T>)
    }
    
@enduml

